--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,6 +2,22 @@ li{
     display:inline-block;
     padding:15px;
 }
-/*h1{text-align:center;}*/
+h1{text-align:center;}
 
-a{text-size:large;}
+form{
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
+}
+a{font-size:large;}
+
+#title{
+    width:75%;
+    margin-left:auto;
+    margin-right:auto;
+}
+#body{
+    width:75%;
+    margin-left:auto;
+    margin-right:auto;
+}
