--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments/header :: header('Post Details')"></head>
@@ -10,6 +11,13 @@
     <h1 th:text="${post.title}"></h1>
     <p th:text="${post.body}"></p>
 
+    <!-- Edit this post -->
+    <a th:href="@{/posts/{id}/edit(id=${post.id})}">Edit</a>
+
+    <!-- Delete Button -->
+    <form th:action="@{/posts/delete}" th:method="POST">
+        <button th:value="${post.id}" th:name="id">Delete this post</button>
+    </form>
 </main>
 
 </body>
