--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head th:replace="fragments/header :: header('Create a new post')"></head>
+<head th:replace="fragments/header :: header('Edit This Post')"></head>
 
 <body>
 
 <div th:replace="fragments/navbar :: navbar"></div>
 
-<h1 style="text-align:center;margin-left:-20%">Create a New Post!</h1>
-<form th:action="@{/posts/edit(id=${post.id})}" th:method="post">
+<h1 style="text-align:center;margin-left:-20%">Edit This Post!</h1>
+<form th:action="@{/posts/{id}/edit(id=${post.id})}" th:method="post">
 
     <label for="title">Title: </label><br/>
 
@@ -15,7 +15,7 @@
 
     <label for="body">Body: </label><br/>
 
-    <textarea th:value="${post.body}" name="body" id="body" cols="30" rows="10"></textarea><br/>
+    <textarea th:text="${post.body}" name="body" id="body" cols="30" rows="10"></textarea><br/>
 
     <button type="submit">Save Post</button>
 </form>
